26 September 2006: Wouter
	- NSD compiles on Solaris 10 with the sun cc compiler.
	  Added a define for _STDC_C99 for that.
	- Checked that the patch for solaris for bug 143 indeed fixes the bug.
	- Fixed bug #146 reported by Koh-ichi Ito: when chrooted nsd failed
	  to write xfrdfile/difffile.
	
18 September 2006: Wouter
	- no queries for NSEC3, RRSIG, ANY succeed for nsec3 only domains.

15 September 2006: Wouter
	- Fixed LOC parsing of integer overflow causing maximum values.
	  Added to test and backported fix to 2.3.6.
	- NSEC3 qtype queries get noerror/nodata or nxdomain answers.
	  You can query for NSEC3PARAM.
	- warnings for printf format on maxOS (sizet needs cast to int).

13 September 2006: Wouter
	- added fsync to AF_UNIX sockets to write last command (QUIT) before
	  closing them.
	- sent explicit QUIT command to xfrd on final shutdown of the server.

12 September 2006: Wouter
	- Bug #144: LOC defaults for unspecified values wrong. Error in zonec.
	  Set defaults. Also fixed parser if LOC has no minutes or seconds.
	- Also fixed rounding error in seconds 0.001 decimal. 
	- Test tpkg for bug 144.

11 September 2006: Wouter
	- nsdc now more portable in use of 'which'.
	  Does not only look at exit code but also checks for '^no ' string.
	- nsd-patch does a chdir to zonesdir for relative difffile or dbfile
	  path names.
	- nsdc handles zonesdir: for relative pidfile, dbfile, difffile 
	  pathnames.

7 September 2006: Wouter
	- bumped version to 3.0.2.
	- Nice configuration error when you had the wrong zone name in the
	  nsd.conf file. Zonec will give an error already.
	- When you start a secondary zone without a zone file, you get
	  a much nicer error message, warning you of the zone transfer.
	- Credits for prerelease testers; Thanks guys!

6 September 2006: Wouter
	- Fixed nsd-patch so that it writes the SOA at the start of the file.
	- test tpkg that tests for the bug, has multiple rrsets at zone apex
	  and does nsd-patch followed by zonec.